objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>APM_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APM Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>Partner_or_Venue__r.Account__r.BillingStreet &amp;&quot;, &quot;&amp;

IF(ISBLANK( Partner_or_Venue__r.Account__r.BillingCity ),&quot;&quot;,Partner_or_Venue__r.Account__r.BillingCity&amp;&quot;, &quot;)&amp;

IF(ISBLANK( Partner_or_Venue__r.Account__r.BillingPostalCode ),&quot;&quot;,Partner_or_Venue__r.Account__r.BillingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_WF__c</fullName>
        <label>Account created datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_ID_del__c</fullName>
        <description>Account ID of the related Usage</description>
        <formula>Partner_or_Venue__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF(Partner_or_Venue__r.Account__r.Name=&quot;Dummy Usage 2014&quot;,&quot;&quot;,Partner_or_Venue__r.Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <description>planned arrival time at rca project partner</description>
        <inlineHelpText>Appears on logistics form. This is the time the group should arrive at the partner on the first day.</inlineHelpText>
        <label>Day 1 arrival time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Autumn_Wave__c</fullName>
        <formula>Wave__r.Autumn_wave__c</formula>
        <label>Autumn Wave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Blue?</inlineHelpText>
        <label>Blue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to find the names of the user who has confirmed this particular booking</description>
        <inlineHelpText>A lookup to find the names of the user who has confirmed this particular booking</inlineHelpText>
        <label>Booked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bookings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Date_Formula_Text__c</fullName>
        <formula>CASE(
		MOD( Booking_Date_Formula__c - DATE( 1900, 1, 8 ), 7 ),
		0, &quot;Monday&quot;,
		1, &quot;Tuesday&quot;,
		2, &quot;Wednesday&quot;,
		3, &quot;Thursday&quot;,
		4, &quot;Friday&quot;,
		5, &quot;Saturday&quot;, 
		&quot;Sunday&quot;
) +&apos;, &apos;+ CASE( MONTH( Booking_Date_Formula__c ) ,
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;Mar&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) +&apos; &apos; +text(DAY( Booking_Date_Formula__c ))+&apos;, &apos; + Text(YEAR( Booking_Date_Formula__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Date Formula Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Date_Formula__c</fullName>
        <formula>IF(ISBLANK(What_date_time_should_the_wave_arrive__c ),

IF(
	RecordType.Name = &quot;RCA Partner Challenge&quot;
	, 
	IF(
		ISPICKVAL( Team__r.RCA_1_3__c , &quot;Saturday&quot;)
		,
		Wave__r.RCA_1_Sat__c
		,
		Wave__r.RCA_1_Sun__c
	) 
	,
	
IF(RecordType.Name = &quot;Graduation Usage&quot;,

DATEVALUE( What_date_time_should_the_wave_arrive__c ),

Wave_Component_Start_Date__c
))

,
DATEVALUE( What_date_time_should_the_wave_arrive__c )
)</formula>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <label>Booking Date.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <description>A Booking Status to track the progress of each Booking for a Usage of an Account</description>
        <label>Booking Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transport booked</fullName>
                </value>
                <value>
                    <fullName>Transport plan uploaded</fullName>
                </value>
                <value>
                    <fullName>Risk assessment complete</fullName>
                </value>
                <value>
                    <fullName>Logistics form uploaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Timings__c</fullName>
        <description>Field pulled onto the Contract form</description>
        <inlineHelpText>Enter the timings of your booking/visit here e.g.4pm-6pm.  This will go onto the contract sheet.</inlineHelpText>
        <label>Timings of booking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_details__c</fullName>
        <description>Field pulled onto the Contract form</description>
        <inlineHelpText>Enter the details of your booking/visit here.  This will go onto the contract sheet.</inlineHelpText>
        <label>Booking details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booking_type_check__c</fullName>
        <formula>IF( RecordTypeId =&quot;012C0000000QJIs&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking type check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings__c</fullName>
        <formula>IF( OR(ISPICKVAL( Status__c, &quot;Confirmed&quot;),ISPICKVAL( Status__c, &quot;Not in use this year&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Challenge_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cluster_Pull__c</fullName>
        <description>Field that Pulls the cluster into the booking object for reporting</description>
        <formula>Wave__r.Wave_Cluster__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Venue_Waves_5_9__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This confirms that the booking can adhere to the new guidelines for waves 5-9</inlineHelpText>
        <label>Confirmed Venue (Waves 5-9)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Appears on logistics form. This pulls from the Contact&apos;s Salesforce page.</inlineHelpText>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Appears on logistics form. Selecting a contact will automatically pull through the phone number provided on their Contact page.</inlineHelpText>
        <label>Who will be the on site contact?</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>It looks like the account you have linked does not have a contact by that name.</errorMessage>
            <filterItems>
                <field>$Source.Account_ID_WF__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.CreatedDate</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bookings (Contact on the Day)</relationshipLabel>
        <relationshipName>Bookings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_on_the_Day_Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact on the Day Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_on_the_day_WorkPhone__c</fullName>
        <formula>Contact__r.npe01__WorkPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact on the day WorkPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_on_the_day_name__c</fullName>
        <formula>Contact__r.FirstName &amp;&quot; &quot;&amp;  Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact on the day name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_including_VAT__c</fullName>
        <label>Cost including VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Booked__c</fullName>
        <label>Date Booked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_event__c</fullName>
        <label>Date of event:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_planned__c</fullName>
        <label>Date planned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_2_arrival_time__c</fullName>
        <inlineHelpText>Appears on logistics form. This is the time the group should arrive at the partner on the second day.</inlineHelpText>
        <label>Day 2 arrival time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day_2_departure_time__c</fullName>
        <inlineHelpText>Appears on logistics form. This is the time the group should depart from the partner on the second day.</inlineHelpText>
        <label>Day 2 departure time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <description>planned departure time at rca project partner</description>
        <inlineHelpText>Appears on logistics form. This is the time the group should depart from the partner on the first day.</inlineHelpText>
        <label>Day 1 departure time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Details_of_weekend_1_booking__c</fullName>
        <inlineHelpText>Include which rooms and the timings</inlineHelpText>
        <label>Details of weekend 1 booking</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_weekend_2_booking__c</fullName>
        <inlineHelpText>Include which rooms and the timings</inlineHelpText>
        <label>Details of weekend 2 booking</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_weekend_3_booking__c</fullName>
        <inlineHelpText>Include which rooms and the timings</inlineHelpText>
        <label>Details of weekend 3 booking</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_time__c</fullName>
        <label>End time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_end_time__c</fullName>
        <description>A textual representation of the booking&apos;s graduation start time based on the What_date_time_should_the_wave_leave__c field for use by CS to send out graduation invites. As date/time fields are stored in GMT, this field needs to be updated for daylight savings time.</description>
        <formula>CASE(1, 
IF(DATEVALUE(What_date_time_should_the_wave_leave__c)&lt;DATEVALUE(&quot;2015-10-25&quot;),1,0), 
LEFT(RIGHT(TEXT( What_date_time_should_the_wave_leave__c +0.0416666666666667 ),9),5), 

IF(AND(DATEVALUE(What_date_time_should_the_wave_leave__c)&gt;DATEVALUE(&quot;2015-10-25&quot;),DATEVALUE(What_date_time_should_the_wave_leave__c)&lt;DATEVALUE(&quot;2016-03-27&quot;)),1,0), 
LEFT(RIGHT(TEXT( What_date_time_should_the_wave_leave__c ),9),5), 

IF(AND(DATEVALUE(What_date_time_should_the_wave_leave__c)&gt;DATEVALUE(&quot;2016-03-26&quot;),DATEVALUE(What_date_time_should_the_wave_leave__c)&lt;DATEVALUE(&quot;2016-10-30&quot;)),1,0), 
LEFT(RIGHT(TEXT( What_date_time_should_the_wave_leave__c + 0.0416666666666667),9),5), 

LEFT(RIGHT(TEXT( What_date_time_should_the_wave_leave__c ),9),5) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation end time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_start_time__c</fullName>
        <description>A textual representation of the booking&apos;s graduation start time based on the What_date_time_should_the_wave_arrive__c field for use by CS to send out graduation invites. This field is accurate for all time periods greater than 2015-03-28 and less than 2017-03-26</description>
        <formula>CASE(1,
IF(DATEVALUE(What_date_time_should_the_wave_arrive__c)&lt;DATEVALUE(&quot;2015-10-25&quot;),1,0),
LEFT(RIGHT(TEXT( What_date_time_should_the_wave_arrive__c +0.0416666666666667 ),9),5),

IF(AND(DATEVALUE(What_date_time_should_the_wave_arrive__c)&gt;DATEVALUE(&quot;2015-10-25&quot;),DATEVALUE(What_date_time_should_the_wave_arrive__c)&lt;DATEVALUE(&quot;2016-03-27&quot;)),1,0),
LEFT(RIGHT(TEXT( What_date_time_should_the_wave_arrive__c ),9),5),

IF(AND(DATEVALUE(What_date_time_should_the_wave_arrive__c)&gt;DATEVALUE(&quot;2016-03-26&quot;),DATEVALUE(What_date_time_should_the_wave_arrive__c)&lt;DATEVALUE(&quot;2016-10-30&quot;)),1,0),
LEFT(RIGHT(TEXT( What_date_time_should_the_wave_arrive__c + 0.0416666666666667),9),5),
 
LEFT(RIGHT(TEXT( What_date_time_should_the_wave_arrive__c ),9),5)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation start time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Half_Cluster__c</fullName>
        <formula>IF(  CONTAINS(Wave__r.Name , &quot; A &quot;),&quot;A&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; A &quot;),&quot;A&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; B &quot;),&quot;B&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; C &quot;),&quot;C&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; D &quot;),&quot;D&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; E &quot;),&quot;E&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; F &quot;),&quot;F&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; G &quot;),&quot;G&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; H &quot;),&quot;H&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; I &quot;),&quot;I&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; J &quot;),&quot;J&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; K &quot;),&quot;K&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; L &quot;),&quot;L&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; M &quot;),&quot;M&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; N &quot;),&quot;N&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; O &quot;),&quot;O&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; P &quot;),&quot;P&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; Q &quot;),&quot;Q&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; R &quot;),&quot;R&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; S &quot;),&quot;S&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; T &quot;),&quot;T&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; U &quot;),&quot;U&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; V &quot;),&quot;V&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; W &quot;),&quot;W&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; X &quot;),&quot;X&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; Y &quot;),&quot;Y&quot;,
IF(  CONTAINS(Wave__r.Name , &quot; Z &quot;),&quot;Z&quot;,
&quot;&quot;)))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_much_money_are_we_giving_to_them__c</fullName>
        <label>How much money are we giving to them?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Info_to_NCS_Staff__c</fullName>
        <inlineHelpText>Appears on logistics form. Info for SMs/practitioners e.g. notes on the location/contact, or how the different teams will be managed.</inlineHelpText>
        <label>Info to NCS Staff</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_TC_KO_venue_for_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is TC KO venue for Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_to_meet__c</fullName>
        <inlineHelpText>This should be a clear description of where Summer Staff go on the day.  If it&apos;s a new address then enter the address, if it&apos;s at the main address then enter &quot;Main address&quot;.  This information is not used for Young People</inlineHelpText>
        <label>Meeting point on the day</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For bookings relating to MPs only - please choose the MP Request this Booking is fulfilling</inlineHelpText>
        <label>MP Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MP_Request__c.Request__c</field>
                <operation>equals</operation>
                <value>Attend Graduation, Attend RCA Day, Dragon, General Visit, Local Community Leader, Professional Visit</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MP_Request__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_YP_rooms__c</fullName>
        <label>Max YP rooms</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_staff_rooms__c</fullName>
        <label>Max staff rooms</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_storage_other_rooms__c</fullName>
        <label>Max storage/other rooms</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Project__c</fullName>
        <description>Field used on a document given out to the Media Practitioners before the summer</description>
        <inlineHelpText>What does the practitioner need to know about this partner? And what should their group be  creating/doing with the Community group?

  e.g. &quot;A promotional video for the Elderly Centre&quot; or &quot;Impact of spending cuts on the Playgroup&quot;.</inlineHelpText>
        <label>Info to Practitioners</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Booking Name.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Optimised_Journeys__c</fullName>
        <description>Tallies the number of linked Transport Orders that are by Private Transport, and have been submitted</description>
        <label>Number of Optimised Journeys</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_teams__c</fullName>
        <label>Number of teams</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overview_of_the_visit__c</fullName>
        <inlineHelpText>Appears on logistics form. Please provide detailed visit plans. Tip: for the best formatting results, copy and paste the template found on the Operations Portal.</inlineHelpText>
        <label>Overview of the visit</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PC_KO_day__c</fullName>
        <formula>Wave__r.PC_KO_day__c</formula>
        <label>PC KO day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Return_day__c</fullName>
        <formula>Wave__r.PC_Return_day__c</formula>
        <label>PC Return day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Venue_Address_line_1__c</fullName>
        <formula>Wave__r.PC_venue__r.Address_line_1__c</formula>
        <label>PC Venue Address line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Venue_Address_line_2__c</fullName>
        <formula>Wave__r.PC_venue__r.Address_line_2__c</formula>
        <label>PC Venue Address line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Venue_Address_line_3__c</fullName>
        <formula>Wave__r.PC_venue__r.Address_line_3__c</formula>
        <label>PC Venue Address line 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Venue_County_or_region__c</fullName>
        <formula>Wave__r.PC_venue__r.County_or_region__c</formula>
        <label>PC Venue County or region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Venue_Postcode__c</fullName>
        <formula>Wave__r.PC_venue__r.Postcode__c</formula>
        <label>PC Venue Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Venue__c</fullName>
        <formula>Wave__r.PC_venue__r.Name</formula>
        <label>PC Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLEASE_NOTE__c</fullName>
        <formula>&quot;START AND END TIMES FOR TIMETABLES CAN BE FOUND ON THE WAVE RECORD&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLEASE NOTE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Check__c</fullName>
        <formula>Wave__r.PM_Check__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programmes User View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Mobile__c</fullName>
        <description>This field is required for using in the Mail Merge documents.</description>
        <formula>Partner_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_email__c</fullName>
        <formula>Partner_Contact__r.Email</formula>
        <label>Partner Contact - email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Logistics__c</fullName>
        <label>Partner Logistics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmation received in writing</fullName>
                </value>
                <value>
                    <fullName>Logistical q&apos;s answered, forms created</fullName>
                </value>
                <value>
                    <fullName>TImetable of day sent</fullName>
                </value>
                <value>
                    <fullName>Risk assessment complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_or_Venue__c</fullName>
        <label>Usage</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 4) OR (3 AND 4) OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Usage_TypeLOOK__c</field>
                <operation>equals</operation>
                <valueField>Partner_or_Venue__c.Usage_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>Partner_or_Venue__c.CreatedDate</field>
                <operation>lessThan</operation>
                <value>1/1/2014 12:00 AM</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Res Acc</value>
            </filterItems>
            <filterItems>
                <field>Partner_or_Venue__c.CreatedDate</field>
                <operation>greaterOrEqual</operation>
                <value>1/1/2014 12:00 AM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Partner_or_Venue__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Planned_Account_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planned Account 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Account_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planned Account 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bookings (!Planned Account 2)</relationshipLabel>
        <relationshipName>Bookings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Account_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planned Account 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bookings (!Planned Account 3)</relationshipLabel>
        <relationshipName>Bookings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Partner_Logistics__c</fullName>
        <label>Project Partner Logistics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmation received in writing</fullName>
                </value>
                <value>
                    <fullName>Logistical q&apos;s answered, forms created</fullName>
                </value>
                <value>
                    <fullName>Timetable of the day sent</fullName>
                </value>
                <value>
                    <fullName>Risk assessment complete</fullName>
                </value>
                <value>
                    <fullName>Invoice sent to Finance</fullName>
                </value>
                <value>
                    <fullName>Equipment list complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_plan_for_the_day__c</fullName>
        <label>Project plan for the day</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RCA_Booking_User__c</fullName>
        <formula>Wave__r.RCA_Booking__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA Booking User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCD_Booking_User__c</fullName>
        <formula>Wave__r.RCD_Booking__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCD Booking User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recognising_a_job_well_done_planned__c</fullName>
        <label>Recognising a &apos;job well done&apos; planned?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_TC_Wave_Autumn__c</fullName>
        <formula>Wave__r.Non_Residential_TC_Wave__c</formula>
        <label>Residential TC Wave Autumn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Split_Site_Fix__c</fullName>
        <inlineHelpText>Use this field to add any instructions that need to go to Staff or YP regarding this venue change.</inlineHelpText>
        <label>Split Site Fix</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_time__c</fullName>
        <label>Start time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>2013 Moses - Status field for Booking</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Not confirmed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not in use this year</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suitable_media_photography_partner__c</fullName>
        <label>Suitable media/photography partner?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Booking_User__c</fullName>
        <formula>Wave__r.TC_Booking__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TC Booking User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <label>Team Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Record_type__c</fullName>
        <formula>Team__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Record type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Skill__c</fullName>
        <formula>IF(ISBLANK( Team__c ),&quot;&quot;, TEXT(Team__r.Theme__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Skill</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Wave__c</field>
                <operation>equals</operation>
                <valueField>Team__c.Wave__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_for__c</fullName>
        <formula>Team__r.Team__c</formula>
        <label>Team for</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_rooms_max__c</fullName>
        <description>This is the result of the sum of the fields &quot;Max YP rooms&quot;, &quot;Max staff rooms&quot; and &quot;Max storage other rooms&quot;.</description>
        <formula>Max_YP_rooms__c + Max_staff_rooms__c + Max_storage_other_rooms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total rooms max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transport_plan__c</fullName>
        <inlineHelpText>What is the transport plan? e.g. if minibus , where should the minibus park? etc</inlineHelpText>
        <label>Transport plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Usage_Account_ID__c</fullName>
        <formula>Partner_or_Venue__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage Account ID</label>
        <type>Text</type>
    </fields>
</CustomObject>